--- a/P4_ScoreKeeper/ScoreKeeper.html
+++ b/P4_ScoreKeeper/ScoreKeeper.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <link rel="stylesheet" href="Score Keeper.css">
+    <link rel="stylesheet" href="ScoreKeeper.css">
 </head>
 
 <body>
@@ -75,7 +75,9 @@
                     <input type="number" name="Scores" placeholder="Scores">
                     <input type="number" name="Assists" placeholder="Assists">
                     <input type="number" name="Rebounds" placeholder="Rebounds">
-                    <button class="add">Add Data</button>
+                    <button class="add">Add</button>
+                    <h3>Click the added data to delete</h3>
+
                 </form>
                 <div class="row">
                     <div class="col-3 border rounded">Player</div>
@@ -96,7 +98,8 @@
                     <input type="number" name="Scores2" placeholder="Scores">
                     <input type="number" name="Assists2" placeholder="Assists">
                     <input type="number" name="Rebounds2" placeholder="Rebounds">
-                    <button class="add">Add Data</button>
+                    <button class="add">Add</button>
+                    <h3>Click the added data to delete</h3>
                 </form>
                 <div class="row">
                     <div class="col-3 border rounded">Player</div>
@@ -107,10 +110,11 @@
                 <ul id="Warriors" class='col-12'>
 
                 </ul>
+
             </div>
         </div>
     </div>
-    <script src="Score Keeper.js"></script>
+    <script src="ScoreKeeper.js"></script>
 </body>
 
 </html>
